--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "react-app-w3",
+  "homepage": "https://tca.cool",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "moralis": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.1.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
